--- a/clasificaciones.html
+++ b/clasificaciones.html
@@ -5,11 +5,11 @@
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
     <meta name ="author" content ="Yeray Rodríguez Granda" />
-    <meta name ="description" content ="Página principal de mi sitio Web sobre MotoGP" />
-    <meta name ="keywords" content ="MotoGP, Motos, Carreras" />
+    <meta name ="description" content ="Las clasificaciones de MotoGP" />
+    <meta name ="keywords" content ="Clasificaciones, MotoGP, Podio, Ganadores" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
-    <title>MotoGP</title>
+    <title>MotoGP-Clasificaciones</title>
 </head>
 
 <body>
@@ -24,6 +24,7 @@
         <a href="juegos.html" title="Información de los juegos">Juegos</a>
         <a href="ayuda.html" title="Información de ayuda">Ayuda</a>
     </nav>
+    <h2>Las clasificaciones de MotoGP</h2>
     <p> En desarrollo </p>
 </body>
 </html>
