--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
     <meta name ="keywords" content ="MotoGP, Motos, Carreras" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
+    <link rel="icon" type="image/png" href="multimedia/logo.png" />
     <title>MotoGP</title>
 </head>
 
 <body>
     <!-- Datos con el contenidos que aparece en el navegador -->
-    <h1>MotoGP Desktop</h1>
-    <nav>
-        <a href="index.html" title="Inicio">Inicio</a> 
-        <a href="piloto.html" title="Información del piloto">Piloto</a>
-        <a href="circuito.html" title="Información del circuito">Circuito</a>
-        <a href="meteorologia.html" title="Información de la meteorología">Meteorología</a>
-        <a href="clasificaciones.html" title="Información de la clasificación">Clasificaciones</a>
-        <a href="juegos.html" title="Información de los juegos">Juegos</a>
-        <a href="ayuda.html" title="Información de ayuda">Ayuda</a>
-    </nav>
+    <header>
+        <h1><a href="index.html">MotoGP Desktop</a></h1>
+        <nav>
+            <a href="index.html" class="active" title="Inicio">Inicio</a> 
+            <a href="piloto.html" title="Información del piloto">Piloto</a>
+            <a href="circuito.html" title="Información del circuito">Circuito</a>
+            <a href="meteorologia.html" title="Información de la meteorología">Meteorología</a>
+            <a href="clasificaciones.html" title="Información de la clasificación">Clasificaciones</a>
+            <a href="juegos.html" title="Información de los juegos">Juegos</a>
+            <a href="ayuda.html" title="Información de ayuda">Ayuda</a>
+        </nav>
+    </header>
     <p> En desarrollo </p>
 </body>
 </html>
