--- a/ayuda.html
+++ b/ayuda.html
@@ -9,22 +9,51 @@
     <meta name ="keywords" content ="Ayuda, MotoGP, Proyecto" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
+    <link rel="icon" type="image/png" href="multimedia/logo.png" />
     <title>MotoGP-Ayuda</title>
 </head>
 
 <body>
     <!-- Datos con el contenidos que aparece en el navegador -->
-    <h1>MotoGP Desktop</h1>
-    <nav>
-        <a href="index.html" title="Inicio">Inicio</a> 
-        <a href="piloto.html" title="Información del piloto">Piloto</a>
-        <a href="circuito.html" title="Información del circuito">Circuito</a>
-        <a href="meteorologia.html" title="Información de la meteorología">Meteorología</a>
-        <a href="clasificaciones.html" title="Información de la clasificación">Clasificaciones</a>
-        <a href="juegos.html" title="Información de los juegos">Juegos</a>
-        <a href="ayuda.html" title="Información de ayuda">Ayuda</a>
-    </nav>
-    <h2>Ayuda MotoGP-Desktop</h2>
-    <p> En desarrollo </p>
+    <header>
+        <h1><a href="index.html">MotoGP Desktop</a></h1>
+        <nav>
+            <a href="index.html" title="Inicio">Inicio</a> 
+            <a href="piloto.html" title="Información del piloto">Piloto</a>
+            <a href="circuito.html" title="Información del circuito">Circuito</a>
+            <a href="meteorologia.html" title="Información de la meteorología">Meteorología</a>
+            <a href="clasificaciones.html" title="Información de la clasificación">Clasificaciones</a>
+            <a href="juegos.html" title="Información de los juegos">Juegos</a>
+            <a href="ayuda.html" class="active" title="Información de ayuda">Ayuda</a>
+        </nav>
+    </header>
+    <p>Estás en: <a href="index.html">Inicio</a> >> <strong>Ayuda</strong></p>
+    <main>
+        <h2>Ayuda MotoGP-Desktop</h2>
+        <section>
+            <h3>Inicio</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Ejercicio 2: Adaptabilidad </p>
+        </section>
+        <section>
+            <h3>Piloto</h3>
+            <p>En esta sección podemos encontrar información del piloto Somkiat Chantra, datos personales, equipos en los que ha competido, resultados de la temporada pasada y un glosario de términos</p>
+        </section>
+        <section>
+            <h3>Circuito</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Ejercicio 2: Adaptabilidad</p>
+        </section>
+        <section>
+            <h3>Meteorología</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Ejercicio 2: Adaptabilidad</p>
+        </section>
+        <section>
+            <h3>Clasificaciones</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Ejercicio 2: Adaptabilidad</p>
+        </section>
+        <section>
+            <h3>Juegos</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Ejercicio 2: Adaptabilidad</p>
+        </section>
+    </main>
 </body>
 </html>
