--- a/piloto.html
+++ b/piloto.html
@@ -9,65 +9,118 @@
     <meta name ="keywords" content ="MotoGP, Piloto, Somkiat Chantra" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
+    <link rel="icon" type="image/png" href="multimedia/logo.png" />
     <title>MotoGP-Piloto</title>
 </head>
-
 <body>
     <!-- Datos con el contenidos que aparece en el navegador -->
-    <h1>MotoGP Desktop</h1>
-    <nav>
-        <a href="index.html" title="Inicio">Inicio</a> 
-        <a href="piloto.html" title="Información del piloto">Piloto</a>
-        <a href="circuito.html" title="Información del circuito">Circuito</a>
-        <a href="meteorologia.html" title="Información de la meteorología">Meteorología</a>
-        <a href="clasificaciones.html" title="Información de la clasificación">Clasificaciones</a>
-        <a href="juegos.html" title="Información de los juegos">Juegos</a>
-        <a href="ayuda.html" title="Información de ayuda">Ayuda</a>
-    </nav>
-    <h2>Somkiat Chantra</h2>
-    <p><a href="https://es.wikipedia.org/wiki/Somkiat_Chantra">Somkiat Chantra</a> es un piloto de motociclismo tailandés que compite en el Campeonato del Mundo de Motociclismo en la categoría reina de <a href="https://www.motogp.com">MotoGP</a> para el LCR Honda IDEMITSU. Es el primer piloto tailandés que compite en la máxima categoría de motociclismo.</p>
-    <ul>
-        <li>Fecha de nacimiento: 15 de diciembre de 1998</li>
-        <li>Lugar de nacimiento: Pattaya, Tailandia</li>
-        <li>Altura: 1.66 m</li>
-        <li>Peso: 51 kg</li>
-        <li>Moto: Honda</li>
-        <li>Dorsal: 35</li>
-    </ul>
-    <ol>
-        <li>AP Honda Racing Thailand</li>
-        <li>Idemitsu Honda Team Asia</li>
-        <li>LCR Honda Idemitsu</li>
-    </ol>
-    <p>Chantra, que participó en las clasificaciones de la Shell Advance Asia Talent Cup, ganó fama al convertirse en campeón en 2016. Compitió en el FIM CEV International Championship Moto3 de 2017. Se clasificó en Pole Position en la apertura de la temporada, pero se cayó en carrera. Terminaría 20.º en la general, con 26 puntos. En 2018 compitió en el Campeonato del Mundo Junior FIM CEV Moto3 de 2018. Durante esta temporada finalizó constantemente en los puntos, pero no pudo sumar un podio, su mejor resultado fue un cuarto lugar en Francia. Terminó el año noveno en la clasificación, con 61 puntos.</p>
-    <dl>
-        <dt>Chicane:</dt>
-        <dd>Una chicane es una serie de curvas en un circuito que se diseñan para reducir la velocidad de los vehículos y aumentar la seguridad.</dd>
-        <dt>Pole:</dt>
-        <dd>La pole position es el primer lugar en la parrilla de salida, que se determina por el tiempo más rápido en la clasificación.</dd>
-        <dt>Tacómetro:</dt>
-        <dd>El tacómetro es un instrumento que mide la velocidad de rotación del motor en revoluciones por minuto (RPM).</dd>
-        <dt>Control de tracción:</dt>
-        <dd>El control de tracción es un sistema que ayuda a prevenir el deslizamiento de la rueda trasera al acelerar, mejorando la estabilidad de la moto.</dd>
-        <dt>Box:</dt>
-        <dd>El box es el área del circuito donde los equipos realizan paradas para cambiar neumáticos, repostar combustible y hacer ajustes en la moto.</dd>
-    </dl>
-    <p>Fue campeón de la Asia Talent Cup en 2016 y obtuvo dos victorias y seis podios en la categoría de Moto2, donde resultó sexto en 2023.</p>
-    <table>
-        <tr>
-            <th>Puntos obtenidos</th>
-            <th>Posición en la clasificación final</th>
-            <th>Poles</th>
-            <th>Victorias</th>
-            <th>Podios</th>
-        </tr>
-        <tr>
-            <td>104</td>
-            <td>12º</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-    </table>
-    <a href="https://www.motogp.com/es/riders/somkiat-chantra/fa8ac04c-8fa2-4c43-9aa5-cc79b1f35fb9?tab=overview">Perfil del piloto en MotoGP</a>
+    <header>
+        <h1><a href="index.html">MotoGP Desktop</a></h1>
+        <nav>
+            <a href="index.html" title="Inicio">Inicio</a> 
+            <a href="piloto.html" class="active" title="Información del piloto">Piloto</a>
+            <a href="circuito.html" title="Información del circuito">Circuito</a>
+            <a href="meteorologia.html" title="Información de la meteorología">Meteorología</a>
+            <a href="clasificaciones.html" title="Información de la clasificación">Clasificaciones</a>
+            <a href="juegos.html" title="Información de los juegos">Juegos</a>
+            <a href="ayuda.html" title="Información de ayuda">Ayuda</a>
+        </nav>
+    </header>
+    <p>Estás en: <a href="index.html">Inicio</a> >> <strong>Piloto</strong></p>
+    <main>
+        <section>
+            <h2>Somkiat Chantra</h2>
+            <p><a href="https://es.wikipedia.org/wiki/Somkiat_Chantra">Somkiat Chantra</a> es un piloto de motociclismo tailandés que compite en el Campeonato del Mundo de Motociclismo en la categoría reina de <a href="https://www.motogp.com">MotoGP</a> para el LCR Honda IDEMITSU. Es el primer piloto tailandés que compite en la máxima categoría de motociclismo.</p>
+            <picture>
+                <source media="(max-width: 465px)" srcset="multimedia/piloto_pequena.jpg">
+                <source media="(max-width: 799px)" srcset="multimedia/piloto_media.jpg">
+                <source media="(min-width: 800px)" srcset="multimedia/piloto.jpg">
+                <img src="multimedia/piloto.jpg" alt="Somkiat Chantra" title="Somkiat Chantra"/>
+            </picture>
+        </section>
+        <section>
+            <h2>Datos personales</h2>
+            <ul>
+                <li>Fecha de nacimiento: 15 de diciembre de 1998</li>
+                <li>Lugar de nacimiento: Pattaya, Tailandia</li>
+                <li>Altura: 1.66 m</li>
+                <li>Peso: 51 kg</li>
+                <li>Moto: Honda</li>
+                <li>Dorsal: 35</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Equipos</h2>
+            <ol>
+                <li>AP Honda Racing Thailand</li>
+                <li>Idemitsu Honda Team Asia</li>
+                <li>LCR Honda Idemitsu</li>
+            </ol>
+        </section>
+        
+        <section>
+            <h2>Trayectoria en Competición</h2>
+            <p>Chantra, que participó en las clasificaciones de la Shell Advance Asia Talent Cup, ganó fama al convertirse en campeón en 2016. Compitió en el FIM CEV International Championship Moto3 de 2017. Se clasificó en Pole Position en la apertura de la temporada, pero se cayó en carrera. Terminaría 20.º en la general, con 26 puntos. En 2018 compitió en el Campeonato del Mundo Junior FIM CEV Moto3 de 2018. Durante esta temporada finalizó constantemente en los puntos, pero no pudo sumar un podio, su mejor resultado fue un cuarto lugar en Francia. Terminó el año noveno en la clasificación, con 61 puntos.</p>
+            <audio controls>
+                <source src="multimedia/audio.mp3" type="audio/mpeg">
+                <source src="multimedia/audio.wav" type="audio/wav">
+                Tu navegador no soporta el elemento de audio.
+            </audio>
+            <p>Fue campeón de la Asia Talent Cup en 2016 y obtuvo dos victorias y seis podios en la categoría de Moto2, donde resultó sexto en 2023.</p>
+            <video controls preload="auto">
+                <source src="multimedia/carrera.mp4" type="video/mp4">   
+                <source src="multimedia/carrera.webm" type="video/webm">
+                Tu navegador no soporta el elemento de video.
+            </video>
+        </section>
+        <section>
+            <h2>Resultados de la temporada 2024</h2>
+            <table>
+                <tr>
+                    <th scope="col" id="categoria" >Categoría</th>
+                    <th scope="col" id="resultado">Resultado</th>
+                </tr>
+                <tr>
+                    <th scope="row" id="puntos" >Puntos</th>
+                    <td headers="puntos resultado" >104</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="posicion" >Posición</th>
+                    <td headers="posicion resultado" >12</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="poles" >Poles</th>
+                    <td headers="poles resultado" >0</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="victorias">Victorias</th>
+                    <td headers="victorias resultado" >0</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="podios" >Podios</th>
+                    <td headers="podios resultado" >0</td>
+                </tr>
+            </table>
+        </section>
+    </main>
+    <aside>
+        <h2>Glosario de términos</h2>
+        <dl>
+            <dt>Chicane:</dt>
+            <dd>Una chicane es una serie de curvas en un circuito que se diseñan para reducir la velocidad de los vehículos y aumentar la seguridad.</dd>
+            <dt>Pole:</dt>
+            <dd>La pole position es el primer lugar en la parrilla de salida, que se determina por el tiempo más rápido en la clasificación.</dd>
+            <dt>Tacómetro:</dt>
+            <dd>El tacómetro es un instrumento que mide la velocidad de rotación del motor en revoluciones por minuto (RPM).</dd>
+            <dt>Control de tracción:</dt>
+            <dd>El control de tracción es un sistema que ayuda a prevenir el deslizamiento de la rueda trasera al acelerar, mejorando la estabilidad de la moto.</dd>
+            <dt>Box:</dt>
+            <dd>El box es el área del circuito donde los equipos realizan paradas para cambiar neumáticos, repostar combustible y hacer ajustes en la moto.</dd>
+        </dl>
+    </aside>
+    <footer>
+        <h2>Páginas web relacionadas</h2>
+        <a href="https://www.motogp.com/es/riders/somkiat-chantra/fa8ac04c-8fa2-4c43-9aa5-cc79b1f35fb9?tab=overview">Perfil del piloto en MotoGP</a>
+    </footer>
 </body>
 </html>
