--- a/ayuda.html
+++ b/ayuda.html
@@ -9,6 +9,8 @@
     <meta name ="keywords" content ="Ayuda, MotoGP, Proyecto" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
+    <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
+
     <link rel="icon" type="image/png" href="multimedia/logo.png" />
     <title>MotoGP-Ayuda</title>
 </head>
