--- a/ayuda.html
+++ b/ayuda.html
@@ -10,7 +10,6 @@
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
     <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
-
     <link rel="icon" type="image/png" href="multimedia/logo.png" />
     <title>MotoGP-Ayuda</title>
 </head>
@@ -20,13 +19,14 @@
     <header>
         <h1><a href="index.html">MotoGP Desktop</a></h1>
         <nav>
-            <a href="index.html" title="Inicio">Inicio</a> 
-            <a href="piloto.html" title="Información del piloto">Piloto</a>
-            <a href="circuito.html" title="Información del circuito">Circuito</a>
-            <a href="meteorologia.html" title="Información de la meteorología">Meteorología</a>
-            <a href="clasificaciones.html" title="Información de la clasificación">Clasificaciones</a>
-            <a href="juegos.html" title="Información de los juegos">Juegos</a>
-            <a href="ayuda.html" class="active" title="Información de ayuda">Ayuda</a>
+            <a href="index.html">Inicio</a> 
+            <a href="piloto.html">Piloto</a>
+            <a href="circuito.html">Circuito</a>
+            <a href="meteorologia.html">Meteorología</a>
+            <a href="clasificaciones.php">Clasificaciones</a>
+            <a href="juegos.html">Juegos</a>
+            <a href="ayuda.html" class="active">Ayuda</a>
+            <a href="cronometro.php">Cronómetro PHP</a>
         </nav>
     </header>
     <p>Estás en: <a href="index.html">Inicio</a> >> <strong>Ayuda</strong></p>
@@ -34,7 +34,7 @@
         <h2>Ayuda MotoGP-Desktop</h2>
         <section>
             <h3>Inicio</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Ejercicio 2: Adaptabilidad </p>
+            <p>Es página principal del sitio y podemos encontrar un carrusel con imágenes de la MotoGP en el circuito Motorland Aragon</p>
         </section>
         <section>
             <h3>Piloto</h3>
@@ -46,7 +46,7 @@
         </section>
         <section>
             <h3>Meteorología</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Ejercicio 2: Adaptabilidad</p>
+            <p>En esta sección podemos encontrar información sobre la ciudad en la que se encuentra el circuito Motorland Aragón, más concretamente Teruel. Además podemos visualizar la meteorología para el días de la carrera y los días previos de entrenamiento.</p>
         </section>
         <section>
             <h3>Clasificaciones</h3>
@@ -54,7 +54,15 @@
         </section>
         <section>
             <h3>Juegos</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Ejercicio 2: Adaptabilidad</p>
+            <p>En esta sección encontramos diferentes juegos con la temáticas de MotoGP./p>
+            <h4>Memoria</h4>
+            <p>Este juego consiste en memorizar las imágenes de las escuderías al darles la vuelta a las cartas encontrando su par</p>
+            <h4>Cronometro</h4>
+            <p>Este juego consiste en un cronometro que puedes arrancar, pausar y reiniciar.</p>
+        </section>
+        <section>
+            <h3>Cronometro PHP</h3>
+            <p>Implementación de un cronómetro utilizando PHP, puedes arrancar, parar y mostrar el tiempo</p>
         </section>
     </main>
 </body>
