--- a/juegos.html
+++ b/juegos.html
@@ -10,7 +10,6 @@
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
     <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
-
     <link rel="icon" type="image/png" href="multimedia/logo.png" />
     <title>MotoGP-Juegos</title>
 </head>
@@ -20,17 +19,24 @@
     <header>
         <h1><a href="index.html">MotoGP Desktop</a></h1>
         <nav>
-            <a href="index.html" title="Inicio">Inicio</a> 
-            <a href="piloto.html" title="Información del piloto">Piloto</a>
-            <a href="circuito.html" title="Información del circuito">Circuito</a>
-            <a href="meteorologia.html" title="Información de la meteorología">Meteorología</a>
-            <a href="clasificaciones.html" title="Información de la clasificación">Clasificaciones</a>
-            <a href="juegos.html" class="active" title="Información de los juegos">Juegos</a>
-            <a href="ayuda.html" title="Información de ayuda">Ayuda</a>
+            <a href="index.html">Inicio</a> 
+            <a href="piloto.html">Piloto</a>
+            <a href="circuito.html">Circuito</a>
+            <a href="meteorologia.html">Meteorología</a>
+            <a href="clasificaciones.php">Clasificaciones</a>
+            <a href="juegos.html" class="active">Juegos</a>
+            <a href="ayuda.html">Ayuda</a>
+            <a href="cronometro.php">Cronómetro PHP</a>
         </nav>
     </header>
     <p>Estás en: <a href="index.html">Inicio</a> >> <strong>Juegos</strong></p>
-    <h2>Juegos sobre MotoGP</h2>
-    <p> En desarrollo </p>
+    <main>
+        <h2>Juegos sobre MotoGP</h2>
+        <ul>
+            <li><a href="memoria.html">Memoria</a></li>
+            <li><a href="cronometro.html">Cronometro</a></li>
+            <li><a href="php/configuracion.php">Configuración Test</a></li>
+        </ul>
+    </main>
 </body>
 </html>
