--- a/piloto.html
+++ b/piloto.html
@@ -10,7 +10,6 @@
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
     <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
-
     <link rel="icon" type="image/png" href="multimedia/logo.png" />
     <title>MotoGP-Piloto</title>
 </head>
@@ -19,13 +18,14 @@
     <header>
         <h1><a href="index.html">MotoGP Desktop</a></h1>
         <nav>
-            <a href="index.html" title="Inicio">Inicio</a> 
-            <a href="piloto.html" class="active" title="Información del piloto">Piloto</a>
-            <a href="circuito.html" title="Información del circuito">Circuito</a>
-            <a href="meteorologia.html" title="Información de la meteorología">Meteorología</a>
-            <a href="clasificaciones.html" title="Información de la clasificación">Clasificaciones</a>
-            <a href="juegos.html" title="Información de los juegos">Juegos</a>
-            <a href="ayuda.html" title="Información de ayuda">Ayuda</a>
+            <a href="index.html">Inicio</a> 
+            <a href="piloto.html" class="active">Piloto</a>
+            <a href="circuito.html">Circuito</a>
+            <a href="meteorologia.html">Meteorología</a>
+            <a href="clasificaciones.php">Clasificaciones</a>
+            <a href="juegos.html">Juegos</a>
+            <a href="ayuda.html">Ayuda</a>
+            <a href="cronometro.php">Cronómetro PHP</a>
         </nav>
     </header>
     <p>Estás en: <a href="index.html">Inicio</a> >> <strong>Piloto</strong></p>
@@ -70,7 +70,7 @@
             </audio>
             <p>Fue campeón de la Asia Talent Cup en 2016 y obtuvo dos victorias y seis podios en la categoría de Moto2, donde resultó sexto en 2023.</p>
             <video controls preload="auto">
-                <source src="multimedia/carrera.mp4" type="video/mp4">   
+                <source src="multimedia/carrera.mp4" type="video/mp4"> 
                 <source src="multimedia/carrera.webm" type="video/webm">
                 Tu navegador no soporta el elemento de video.
             </video>
