--- a/circuito.html
+++ b/circuito.html
@@ -5,14 +5,16 @@
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
     <meta name ="author" content ="Yeray Rodríguez Granda" />
-    <meta name ="description" content ="Circuito de MotoGP" />
-    <meta name ="keywords" content ="Circuito, MotoGP, Pista" />
+    <meta name ="description" content ="Motorland Aragón" />
+    <meta name ="keywords" content ="MotoGP, Aragón, Motorland, circuito" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
     <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
-
     <link rel="icon" type="image/png" href="multimedia/logo.png" />
-    <title>MotoGP-Circuito</title>
+    <script src="js/circuito.js"></script>
+    <script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6CG54dNd65F56vPLyvLeu-KxImPXInhM&amp;">
+    </script>
+    <title>MotoGP</title>
 </head>
 
 <body>
@@ -20,17 +22,36 @@
     <header>
         <h1><a href="index.html">MotoGP Desktop</a></h1>
         <nav>
-            <a href="index.html" title="Inicio">Inicio</a> 
-            <a href="piloto.html" title="Información del piloto">Piloto</a>
-            <a href="circuito.html" class="active" title="Información del circuito">Circuito</a>
-            <a href="meteorologia.html" title="Información de la meteorología">Meteorología</a>
-            <a href="clasificaciones.html" title="Información de la clasificación">Clasificaciones</a>
-            <a href="juegos.html" title="Información de los juegos">Juegos</a>
-            <a href="ayuda.html" title="Información de ayuda">Ayuda</a>
+            <a href="index.html">Inicio</a> 
+            <a href="piloto.html">Piloto</a>
+            <a href="circuito.html" class="active">Circuito</a>
+            <a href="meteorologia.html">Meteorología</a>
+            <a href="clasificaciones.php">Clasificaciones</a>
+            <a href="juegos.html">Juegos</a>
+            <a href="ayuda.html">Ayuda</a>
+            <a href="cronometro.php">Cronómetro PHP</a>
         </nav>
     </header>
     <p>Estás en: <a href="index.html">Inicio</a> >> <strong>Circuito</strong></p>
-    <h2>Circuito de MotoGP</h2>
-    <p> En desarrollo </p>
+    <main>
+        <h2>Motorland Aragón</h2>
+        <section>
+            <h3>Cargar KML</h3>
+            <input type="file" accept=".kml">
+        </section>
+        <section>
+            <h3>Cargar SVG</h3>
+            <input type="file" accept="svg">
+        </section>
+        <section>
+            <h3>Cargar HTML</h3>
+            <input type="file" accept="text/html">
+        </section>
+        <script>
+            let kml = new CargadorKML();
+            let svg = new CargadorSVG();
+            let circuito = new Circuito();
+        </script>
+    </main>    
 </body>
 </html>
