--- a/meteorologia.html
+++ b/meteorologia.html
@@ -10,8 +10,8 @@
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
     <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
-
     <link rel="icon" type="image/png" href="multimedia/logo.png" />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <title>MotoGP-Meteorología</title>
 </head>
 
@@ -20,17 +20,41 @@
     <header>
         <h1><a href="index.html">MotoGP Desktop</a></h1>
         <nav>
-            <a href="index.html" title="Inicio">Inicio</a> 
-            <a href="piloto.html" title="Información del piloto">Piloto</a>
-            <a href="circuito.html" title="Información del circuito">Circuito</a>
-            <a href="meteorologia.html" class="active" title="Información de la meteorología">Meteorología</a>
-            <a href="clasificaciones.html" title="Información de la clasificación">Clasificaciones</a>
-            <a href="juegos.html" title="Información de los juegos">Juegos</a>
-            <a href="ayuda.html" title="Información de ayuda">Ayuda</a>
+            <a href="index.html">Inicio</a> 
+            <a href="piloto.html">Piloto</a>
+            <a href="circuito.html">Circuito</a>
+            <a href="meteorologia.html" class="active">Meteorología</a>
+            <a href="clasificaciones.php" >Clasificaciones</a>
+            <a href="juegos.html">Juegos</a>
+            <a href="ayuda.html">Ayuda</a>
+            <a href="cronometro.php">Cronómetro PHP</a>
         </nav>
     </header>
     <p>Estás en: <a href="index.html">Inicio</a> >> <strong>Meteorología</strong></p>
-    <h2>Meteorología de MotoGP</h2>
-    <p> En desarrollo </p>
+    <main>
+        <h2>Meteorología de MotoGP</h2>
+        <script src="js/ciudad.js"></script>
+        <script>
+            let teruel = new Ciudad("Teruel", "España", "Turolense");
+            teruel.set_poblacion_coordenadas(135309, {latitud: 40.6667, longitud: -0.6667});
+
+            const sectionElement = document.createElement('section');
+
+            const h3Element = document.createElement('h3');
+            h3Element.textContent = `Ciudad: ${teruel.getNombreCiudad()} (${teruel.getNombrePais()})`;
+            sectionElement.appendChild(h3Element);
+
+            sectionElement.innerHTML += teruel.getLista(); 
+
+            const coordenadasContent = teruel.escribirCoordenadas();
+            const main = document.querySelector("main")
+            sectionElement.appendChild(coordenadasContent); 
+            main.append(sectionElement)
+
+            teruel.getMeteorologiaCarrera();
+            teruel.getMeteorologiaEntrenos();
+        </script>
+    </main>
+    
 </body>
 </html>
