--- a/ayuda.html
+++ b/ayuda.html
@@ -26,7 +26,7 @@
             <a href="clasificaciones.php">Clasificaciones</a>
             <a href="juegos.html">Juegos</a>
             <a href="ayuda.html" class="active">Ayuda</a>
-            <a href="cronometro.php">Cronómetro PHP</a>
+            <a href="cronometroPHP.php">Cronómetro PHP</a>
         </nav>
     </header>
     <p>Estás en: <a href="index.html">Inicio</a> >> <strong>Ayuda</strong></p>
@@ -34,7 +34,7 @@
         <h2>Ayuda MotoGP-Desktop</h2>
         <section>
             <h3>Inicio</h3>
-            <p>Es página principal del sitio y podemos encontrar un carrusel con imágenes de la MotoGP en el circuito Motorland Aragon</p>
+            <p>Es página principal del sitio y podemos encontrar un carrusel con imágenes de la MotoGP en el circuito Motorland Aragon y noticias</p>
         </section>
         <section>
             <h3>Piloto</h3>
@@ -42,7 +42,7 @@
         </section>
         <section>
             <h3>Circuito</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Ejercicio 2: Adaptabilidad</p>
+            <p>Aquí podemos encontrar para cargar archivos KML, SVG y HTML</p>
         </section>
         <section>
             <h3>Meteorología</h3>
@@ -50,18 +50,18 @@
         </section>
         <section>
             <h3>Clasificaciones</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Ejercicio 2: Adaptabilidad</p>
+            <p>En esta página encontramos quien gano la carrera con que tiempo y los clasificados</p>
         </section>
         <section>
             <h3>Juegos</h3>
             <p>En esta sección encontramos diferentes juegos con la temáticas de MotoGP./p>
-            <h4>Memoria</h4>
+            <h4>Memoria de cartas</h4>
             <p>Este juego consiste en memorizar las imágenes de las escuderías al darles la vuelta a las cartas encontrando su par</p>
             <h4>Cronometro</h4>
             <p>Este juego consiste en un cronometro que puedes arrancar, pausar y reiniciar.</p>
         </section>
         <section>
-            <h3>Cronometro PHP</h3>
+            <h3>Cronometro</h3>
             <p>Implementación de un cronómetro utilizando PHP, puedes arrancar, parar y mostrar el tiempo</p>
         </section>
     </main>
