--- a/juegos.html
+++ b/juegos.html
@@ -26,16 +26,17 @@
             <a href="clasificaciones.php">Clasificaciones</a>
             <a href="juegos.html" class="active">Juegos</a>
             <a href="ayuda.html">Ayuda</a>
-            <a href="cronometro.php">Cronómetro PHP</a>
+            <a href="cronometroPHP.php">Cronómetro PHP</a>
         </nav>
     </header>
     <p>Estás en: <a href="index.html">Inicio</a> >> <strong>Juegos</strong></p>
     <main>
         <h2>Juegos sobre MotoGP</h2>
         <ul>
-            <li><a href="memoria.html">Memoria</a></li>
-            <li><a href="cronometro.html">Cronometro</a></li>
+            <li><a href="memoria.html">Juego de cartas de memoria</a></li>
+            <li><a href="cronometroPHP.php">Cronometro</a></li>
             <li><a href="php/configuracion.php">Configuración Test</a></li>
+            <li><a href="php/formulario.php">Prueba de usabilidad</a></li>
         </ul>
     </main>
 </body>
