--- a/meteorologia.html
+++ b/meteorologia.html
@@ -27,10 +27,10 @@
             <a href="clasificaciones.php" >Clasificaciones</a>
             <a href="juegos.html">Juegos</a>
             <a href="ayuda.html">Ayuda</a>
-            <a href="cronometro.php">Cronómetro PHP</a>
+            <a href="cronometroPHP.php">Cronómetro PHP</a>
         </nav>
     </header>
-    <p>Estás en: <a href="index.html">Inicio</a> >> <strong>Meteorología</strong></p>
+    <p>Estás en: <a href="cronometroPHP.php">Inicio</a> >> <strong>Meteorología</strong></p>
     <main>
         <h2>Meteorología de MotoGP</h2>
         <script src="js/ciudad.js"></script>
