--- a/xml/InfoCircuito.html
+++ b/xml/InfoCircuito.html
@@ -20,14 +20,16 @@
 
                 <h3>Referencias</h3>
                 <ul>
-                    <li><a href='https://www.motorlandaragon.com/es' target='_blank'>https://www.motorlandaragon.com/es</a></li><li><a href='https://es.wikipedia.org/wiki/MotorLand_Arag%C3%B3n' target='_blank'>https://es.wikipedia.org/wiki/MotorLand_Arag%C3%B3n</a></li><li><a href='https://soymotero.net/noticia/la-invernal-2026-motorland-aragon-informacion/' target='_blank'>https://soymotero.net/noticia/la-invernal-2026-motorland-aragon-informacion/</a></li>
+                    <li><a href='https://www.motorlandaragon.com/es'>Página circuito</a></li>
+                    <li><a href='https://es.wikipedia.org/wiki/MotorLand_Arag%C3%B3n'>Wikipedia</a></li>
+                    <li><a href='https://soymotero.net/noticia/la-invernal-2026-motorland-aragon-informacion/'>Noticia</a></li>
                 </ul>
 
                 <h3>Galería de Fotos</h3>
-                <img src="C:/xampp/htdocs/MotoGP-Desktop/multimedia/panorama.jpeg" alt="Foto del circuito"><img src="C:/xampp/htdocs/MotoGP-Desktop/multimedia/recta.jpg" alt="Foto del circuito"><img src="C:/xampp/htdocs/MotoGP-Desktop/multimedia/curva.jpg" alt="Foto del circuito">
+                <img src="multimedia/panorama.jpeg" alt="Foto del circuito"><img src="multimedia/recta.jpg" alt="Foto del circuito"><img src="multimedia/curva.jpg" alt="Foto del circuito">
 
                 <h3>Videos del Circuito</h3>
-                <video controls><source src="C:/xampp/htdocs/MotoGP-Desktop/multimedia/circuito.mp4" type="video/mp4"></video>
+                <video controls><source src="multimedia/circuito.mp4" type="video/mp4"></video>
 
                 <h3>Clasificados</h3>
                 <ol>
