--- a/memoria.html
+++ b/memoria.html
@@ -29,7 +29,7 @@
             <a href="clasificaciones.php">Clasificaciones</a>
             <a href="juegos.html" class="active">Juegos</a>
             <a href="ayuda.html">Ayuda</a>
-            <a href="cronometro.php">Cronómetro PHP</a>
+            <a href="cronometroPHP.php">Cronómetro PHP</a>
         </nav>
     </header>
     <p>Estás en: <a href="index.html">Inicio</a> >> <a href="juegos.html">Juegos</a> >> <strong>Memoria</strong></p>
