--- a/juegos.html
+++ b/juegos.html
@@ -2,7 +2,6 @@
 
 <html lang="es">
 <head>
-    <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
     <meta name ="author" content ="Yeray Rodríguez Granda" />
     <meta name ="description" content ="Juegos sobre MotoGP" />
@@ -15,7 +14,6 @@
 </head>
 
 <body>
-    <!-- Datos con el contenidos que aparece en el navegador -->
     <header>
         <h1><a href="index.html">MotoGP Desktop</a></h1>
         <nav>
@@ -26,7 +24,6 @@
             <a href="clasificaciones.php">Clasificaciones</a>
             <a href="juegos.html" class="active">Juegos</a>
             <a href="ayuda.html">Ayuda</a>
-            <a href="cronometroPHP.php">Cronómetro PHP</a>
         </nav>
     </header>
     <p>Estás en: <a href="index.html">Inicio</a> >> <strong>Juegos</strong></p>
@@ -35,8 +32,8 @@
         <ul>
             <li><a href="memoria.html">Juego de cartas de memoria</a></li>
             <li><a href="cronometroPHP.php">Cronometro</a></li>
-            <li><a href="php/configuracion.php">Configuración Test</a></li>
-            <li><a href="php/formulario.php">Prueba de usabilidad</a></li>
+            <li><a href="php/configuracion.php" target="_blank">Configuración Test</a></li>
+            <li><a href="php/formulario.php" target="_blank">Prueba de usabilidad</a></li>
         </ul>
     </main>
 </body>
