--- a/ayuda.html
+++ b/ayuda.html
@@ -31,7 +31,7 @@
         <h2>Ayuda MotoGP-Desktop</h2>
         <section>
             <h3>Inicio</h3>
-            <p>Es página principal del sitio y podemos encontrar un carrusel con imágenes de la MotoGP en el circuito Motorland Aragon y noticias</p>
+            <p>Es la página principal del sitio y podemos encontrar un carrusel con imágenes de la MotoGP en el circuito Motorland Aragon y noticias</p>
         </section>
         <section>
             <h3>Piloto</h3>
@@ -39,7 +39,7 @@
         </section>
         <section>
             <h3>Circuito</h3>
-            <p>Aquí podemos encontrar para cargar archivos KML, SVG y HTML</p>
+            <p>Aquí podemos cargar archivos KML, SVG y HTML</p>
         </section>
         <section>
             <h3>Meteorología</h3>
@@ -47,13 +47,13 @@
         </section>
         <section>
             <h3>Clasificaciones</h3>
-            <p>En esta página encontramos quien gano la carrera con que tiempo y los clasificados</p>
+            <p>En esta página encontramos quien gano la carrera, con que tiempo, y la clasificación</p>
         </section>
         <section>
             <h3>Juegos</h3>
-            <p>En esta sección encontramos diferentes juegos con la temáticas de MotoGP./p>
+            <p>En esta sección encontramos diferentes juegos con la temáticas de MotoGP.</p>
             <h4>Memoria de cartas</h4>
-            <p>Este juego consiste en memorizar las imágenes de las escuderías al darles la vuelta a las cartas encontrando su par</p>
+            <p>Este juego consiste en memorizar las imágenes de las escuderías tras las cartas. El objetivo es voltearlas y hacer parejas.</p>
             <h4>Cronometro</h4>
             <p>Este juego consiste en un cronometro que puedes arrancar, pausar y reiniciar.</p>
         </section>
