--- a/circuito.html
+++ b/circuito.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name ="author" content ="Yeray Rodríguez Granda" />
-    <meta name ="description" content ="Motorland Aragón" />
+    <meta name ="description" content ="Motorland Aragón circuito de MotoGP" />
     <meta name ="keywords" content ="MotoGP, Aragón, Motorland, circuito" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
@@ -13,7 +13,7 @@
     <script src="js/circuito.js"></script>
     <script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6CG54dNd65F56vPLyvLeu-KxImPXInhM&amp;">
     </script>
-    <title>MotoGP</title>
+    <title>MotoGP-Circuito</title>
 </head>
 
 <body>
