--- a/memoria.html
+++ b/memoria.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name ="author" content ="Yeray Rodríguez Granda" />
-    <meta name ="description" content ="Juego de memoria sobre las escuderias" />
+    <meta name ="description" content ="Juego de memoria de cartas sobre las escuderias" />
     <meta name ="keywords" content ="MotoGP, Juegos, memoria, cartas" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type ="text/css" href="estilo/layout-cards.css" />
     <link rel="icon" type="image/png" href="multimedia/logo.png" />
     <script src="js/cronometro.js"></script>
-    <title>MotoGP-Juegos</title>
+    <title>MotoGP-Memoria</title>
 </head>
 
 <body>
