--- a/meteorologia.html
+++ b/meteorologia.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name ="author" content ="Yeray Rodríguez Granda" />
     <meta name ="description" content ="Meteorología de MotoGP" />
-    <meta name ="keywords" content ="Tiempo, Meteorología, MotoGP" />
+    <meta name ="keywords" content ="Tiempo, temperatura, lluvia, Meteorología, MotoGP" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
     <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
