--- a/ayuda.html
+++ b/ayuda.html
@@ -31,31 +31,70 @@
         <h2>Ayuda MotoGP-Desktop</h2>
         <section>
             <h3>Inicio</h3>
-            <p>Es la página principal del sitio y podemos encontrar un carrusel con imágenes de la MotoGP en el circuito Motorland Aragon y noticias</p>
+            <p>Aquí encontramos:</p>
+            <ul>
+                <li>Imágenes del circuito MotorLand MotoGP</li>
+                <li>Noticias de MotoGP</li>
+            </ul>
         </section>
         <section>
             <h3>Piloto</h3>
-            <p>En esta sección podemos encontrar información del piloto Somkiat Chantra, datos personales, equipos en los que ha competido, resultados de la temporada pasada y un glosario de términos</p>
+            <p>Aquí encontramos:</p>
+            <ul>
+                <li>Datos sobre el piloto (Nombre, fecha de nacimiento, dorsal, equipo,...)</li>
+                <li>Audios sobre MotoGP</li>
+                <li>Videos sobre MotoGP</li>
+                <li>Glosario de términos</li>
+                <li>Páginas relacionadas</li>
+            </ul>
         </section>
         <section>
             <h3>Circuito</h3>
-            <p>Aquí podemos cargar archivos KML, SVG y HTML</p>
+            <p>Aquí encontramos:</p>
+            <ul>
+                <li>Carga de arhivos KML</li>
+                <li>Carga de arhivos SVG</li>
+                <li>Carga de arhivos HTML</li>
+            </ul>
         </section>
         <section>
             <h3>Meteorología</h3>
-            <p>En esta sección podemos encontrar información sobre la ciudad en la que se encuentra el circuito Motorland Aragón, más concretamente Teruel. Además podemos visualizar la meteorología para el días de la carrera y los días previos de entrenamiento.</p>
+            <p>Aquí encontramos:</p>
+            <ul>
+                <li>Información sobre donde se encuentra el circuito</li>
+                <li>Meteorología del dia de la carrera (2025-06-08)</li>
+                <li>Meteorología de los días de Entrenamientos (2025-06-05 a 2025-06-07)</li>
+            </ul>        
         </section>
         <section>
             <h3>Clasificaciones</h3>
-            <p>En esta página encontramos quien gano la carrera, con que tiempo, y la clasificación</p>
+            <p>Aquí encontramos:</p>
+            <ul>
+                <li>EL ganador de la carrera y tu tiempo</li>
+                <li>Clasificación</li>
+            </ul>  
         </section>
         <section>
             <h3>Juegos</h3>
-            <p>En esta sección encontramos diferentes juegos con la temáticas de MotoGP.</p>
-            <h4>Memoria de cartas</h4>
-            <p>Este juego consiste en memorizar las imágenes de las escuderías tras las cartas. El objetivo es voltearlas y hacer parejas.</p>
-            <h4>Cronometro</h4>
-            <p>Este juego consiste en un cronometro que puedes arrancar, pausar y reiniciar.</p>
+            <p>Aquí encontramos:</p>
+           <ul>
+                <li>Juego de cartas de memoria
+                    <ol>
+                        <li>12 cartas</li>
+                        <li>Dale la vuelta a las cartas</li>
+                        <li>Haz parejas en el menor tiempo</li>
+                    </ol>
+                </li> 
+                <li>Cronómetro
+                    <ol>
+                        <li>Arrancar: iniciar el tiempo</li>
+                        <li>Parar: parar el tiempo</li>
+                        <li>Mostrar: mostrar el tiempo contado</li>
+                    </ol>
+                </li>
+                <li>Configuración test</li>
+                <li>Prueba de usabilidad</li>
+            </ul>  
         </section>
     </main>
 </body>
