--- a/piloto.html
+++ b/piloto.html
@@ -65,6 +65,7 @@
                 <source src="multimedia/audio.wav" type="audio/wav">
                 Tu navegador no soporta el elemento de audio.
             </audio>
+            <p>Fue campeón de la Asia Talent Cup en 2016 y obtuvo dos victorias y seis podios en la categoría de Moto2, donde resultó sexto en 2023.</p>
             <video controls preload="auto">
                 <source src="multimedia/carrera.mp4" type="video/mp4"> 
                 <source src="multimedia/carrera.webm" type="video/webm">
