--- a/piloto.html
+++ b/piloto.html
@@ -60,12 +60,13 @@
         <section>
             <h2>Trayectoria en Competición</h2>
             <p>Chantra, que participó en las clasificaciones de la Shell Advance Asia Talent Cup, ganó fama al convertirse en campeón en 2016. Compitió en el FIM CEV International Championship Moto3 de 2017. Se clasificó en Pole Position en la apertura de la temporada, pero se cayó en carrera. Terminaría 20.º en la general, con 26 puntos. En 2018 compitió en el Campeonato del Mundo Junior FIM CEV Moto3 de 2018. Durante esta temporada finalizó constantemente en los puntos, pero no pudo sumar un podio, su mejor resultado fue un cuarto lugar en Francia. Terminó el año noveno en la clasificación, con 61 puntos.</p>
+            <h2>Audio del piloto</h2>
             <audio controls>
                 <source src="multimedia/audio.mp3" type="audio/mpeg">
                 <source src="multimedia/audio.wav" type="audio/wav">
                 Tu navegador no soporta el elemento de audio.
             </audio>
-            <p>Fue campeón de la Asia Talent Cup en 2016 y obtuvo dos victorias y seis podios en la categoría de Moto2, donde resultó sexto en 2023.</p>
+            <h2>Vídeo del piloto</h2>
             <video controls preload="auto">
                 <source src="multimedia/carrera.mp4" type="video/mp4"> 
                 <source src="multimedia/carrera.webm" type="video/webm">
