--- a/piloto.html
+++ b/piloto.html
@@ -76,6 +76,7 @@
         <section>
             <h2>Resultados de la temporada 2024</h2>
             <table>
+                <caption>Estadísticas de rendimiento del jugador</caption>
                 <tr>
                     <th scope="col" id="categoria" >Categoría</th>
                     <th scope="col" id="resultado">Resultado</th>
