--- a/piloto.html
+++ b/piloto.html
@@ -76,32 +76,31 @@
         <section>
             <h2>Resultados de la temporada 2024</h2>
             <table>
-                <caption>Estadísticas de rendimiento del jugador</caption>
-                <tr>
-                    <th scope="col" id="categoria" >Categoría</th>
-                    <th scope="col" id="resultado">Resultado</th>
-                </tr>
-                <tr>
-                    <th scope="row" id="puntos" >Puntos</th>
-                    <td headers="puntos resultado" >104</td>
-                </tr>
-                <tr>
-                    <th scope="row" id="posicion" >Posición</th>
-                    <td headers="posicion resultado" >12</td>
-                </tr>
-                <tr>
-                    <th scope="row" id="poles" >Poles</th>
-                    <td headers="poles resultado" >0</td>
-                </tr>
-                <tr>
-                    <th scope="row" id="victorias">Victorias</th>
-                    <td headers="victorias resultado" >0</td>
-                </tr>
-                <tr>
-                    <th scope="row" id="podios" >Podios</th>
-                    <td headers="podios resultado" >0</td>
-                </tr>
-            </table>
+				<tbody><tr>
+					<th scope="col" id="categoria">Categoría</th>
+					<th scope="col" id="resultado">Resultado</th>
+				</tr>
+				<tr>
+					<th scope="row" id="puntos">Puntos</th>
+					<td headers="puntos resultado">284</td>
+				</tr>
+				<tr>
+					<th scope="row" id="posicion">Posición</th>
+					<td headers="posicion resultado">4</td>
+				</tr>
+				<tr>
+					<th scope="row" id="poles">Poles</th>
+					<td headers="poles resultado">3</td>
+				</tr>
+				<tr>
+					<th scope="row" id="victorias">Victorias</th>
+					<td headers="victorias resultado">1</td>
+				</tr>
+				<tr>
+					<th scope="row" id="podios">Podios</th>
+					<td headers="podios resultado">7</td>
+				</tr>
+			</tbody></table>
         </section>
     </main>
     <aside>
